--- a/templates/User Panel Page/akhenbach_results.html
+++ b/templates/User Panel Page/akhenbach_results.html
@@ -56,9 +56,9 @@
                 </div>
     
                 <!-- Display the responsive plot -->
-                <div class="text-center">
+                <!-- <div class="text-center">
                   <h4>نمودار نمرات آزمون</h4>
-                  <img src="{{ plot_url }}" alt="Akhenbach Test Plot" class="img-fluid rounded">
+                  <img src="{{ plot_url }}" alt="Akhenbach Test Plot" class="img-fluid rounded"> -->
               </div>
             </div>
     
